# mPy

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  run.py  test_audio.py
src/mp3_player_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/player_server/: main.py
src/player_server/core/: config.py  player.py
src/player_server/services/: audio_os.py  database.py
src/player_server/web/static/: main.js  script.js  style.css
src/player_server/web/templates/: index.html
